[tool.poetry]
name = "dbt-project"
version = "0.1.0"
description = ""
authors = ["Yogic <yogicrhama@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_project"}]

[tool.poetry.dependencies]
python = ">=3.10.11"
dbt-postgres = "^1.6.0"
dbt-bigquery = "^1.6.1"
dbt-snowflake = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
